// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormHelperText should render error message 1`] = `
<DocumentFragment>
  <p
    class="font-normal text-sm text-theme-danger-500"
  >
    Error Message
  </p>
</DocumentFragment>
`;

exports[`FormHelperText should render hint text 1`] = `
<DocumentFragment>
  <p
    class="font-normal text-sm text-theme-secondary-500"
  >
    Test Message
  </p>
</DocumentFragment>
`;
